[package]
name = "rustblock"
version = "0.1.0"
edition = "2021"

[dependencies]
dslab = { git = "https://github.com/osukhoroslov/dslab.git", package = "dslab-core" }
rand = "0.8.5"
serde = { version = "1.0", features = ["derive"] }
log = "^0.4"

[dependencies.uuid]
version = "1.8.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]