[package]
name = "rustblock"
version = "0.1.0"
edition = "2021"

[dependencies]
dslab = { git = "https://github.com/osukhoroslov/dslab.git", package = "dslab-core" }
rand = "0.8.5"
rand_distr = "0.4"
serde = { version = "1.0", features = ["derive", "rc"] }
log = "^0.4"
env_logger = "0.10"
uuid = { version = "1.4", features = ["v4"] }
twox-hash = "1.6"